# bmp_rs

./: Cargo.toml  LICENSE  README.md
src/: bitmap.rs  bmp.rs  lib.rs
