[package]
name = "bmp_rs"
version = "0.0.3"
authors = [ "Daniel Drywa <daniel@drywa.me>" ]
description = "Bitmap decoder. (Still in the early stages)"
#documentation = ""
homepage = "http://www.drywa.me"
repository = "https://github.com/TheSatoshiChiba/bmp_rs"
readme = "README.md"
keywords = [ "bitmap", "file", "reader", "writer", "graphics" ]
categories = [ "multimedia", "multimedia::images", "parsing", "encoding" ]
license = "Apache-2.0"
include = [ "Cargo.toml", "src/**/*.rs", "README.md", "LICENSE" ]

[dependencies]
byteorder = "1.1.*"
