[package]
name = "bmp_rs"
version = "0.0.6"
authors = [ "Daniel Drywa <daniel@drywa.me>" ]
description = "A bitmap file decoder for Microsoft bmp files"
#documentation = ""
homepage = "http://www.drywa.me"
repository = "https://github.com/TheSatoshiChiba/bmp_rs"
readme = "README.md"
keywords = [ "bitmap", "bmp", "encoding", "decoding", "image" ]
categories = [ "multimedia::encoding", "multimedia::images", "parsing", "encoding" ]
license = "Apache-2.0"
include = [ "Cargo.toml", "src/**/*.rs", "README.md", "LICENSE" ]

[dependencies]
byteorder = "1.2.*"
